--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
 spring.datasource.username=root
 spring.datasource.password=root3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#hibernate dialect is no longer needed in Spring 3.2.*
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
